--- a/fausnd/fausnd.cbp
+++ b/fausnd/fausnd.cbp
@@ -16,9 +16,9 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/fausnd" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/fausnd" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
-				<Option type="1" />
+				<Option type="3" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
@@ -29,8 +29,34 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-std=c++11" />
+			<Add option="-std=c++0x" />
 			<Add option="-Wall" />
+			<Add directory="../../../../MinGW/include/SDL2" />
 		</Compiler>
+		<Linker>
+			<Add option="-lSDL2main" />
+			<Add option="-lSDL2_mixer" />
+			<Add option="-lSDL2" />
+			<Add option="-mwindows" />
+			<Add option="-lm" />
+			<Add option="-ldinput8" />
+			<Add option="-ldxguid" />
+			<Add option="-ldxerr8" />
+			<Add option="-luser32" />
+			<Add option="-lgdi32" />
+			<Add option="-lwinmm" />
+			<Add option="-limm32" />
+			<Add option="-lole32" />
+			<Add option="-loleaut32" />
+			<Add option="-lshell32" />
+			<Add option="-lversion" />
+			<Add option="-luuid" />
+			<Add option="-static-libgcc" />
+			<Add option="-static" />
+			<Add directory="../../../../MinGW/lib" />
+		</Linker>
+		<Unit filename="../fausnd.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
